--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -134,7 +134,7 @@ cplay_5 : "❍ ᴏɴʟʏ ᴄʜᴀɴɴᴇʟs ᴀʀᴇ sᴜᴘᴘᴏʀᴛᴇᴅ."
 cplay_6 : "❍ ʏᴏᴜ ɴᴇᴇᴅ ᴛᴏ ʙᴇ ᴛʜᴇ <b>ᴏᴡɴᴇʀ</b> ᴏғ ᴛʜᴇ ᴄʜᴀɴɴᴇʟ {0} ᴛᴏ ᴄᴏɴɴᴇᴄᴛ ɪᴛ ᴡɪᴛʜ ᴛʜɪs ɢʀᴏᴜᴘ.\n<b>ᴄʜᴀɴɴᴇʟ's ᴏᴡɴᴇʀ :</b> @{1}\n\nᴀʟᴛᴇʀɴᴀᴛɪᴠᴇʟʏ ʏᴏᴜ ᴄᴀɴ ʟɪɴᴋ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴛᴏ ᴛʜᴀᴛ ᴄʜᴀɴɴᴇʟ ᴀɴᴅ ᴛʜᴇɴ ᴛʀʏ ᴄᴏɴɴɴᴇᴄᴛɪɴɢ ᴡɪᴛʜ <code>/channelplay linked</code>"
 cplay_7 : "❍ ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴅɪsᴀʙʟᴇᴅ."
 
-play_1 : "🥀 𝐏ɤσƈɛssɩŋʛ... 🦋"
+play_1 : "🥀 𝐏ɤσƈɛssɩŋʛ ᴘᴀʟʟᴀᴠɪ ꜱᴀʀᴋᴀʀ ᴍᴜꜱɪᴄ...❤️"
 play_2 : "<b>➻ ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴍᴏᴅᴇ</b>\n\nᴘʀᴏᴄᴇssɪɴɢ, ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ...\n\n<b>ʟɪɴᴋᴇᴅ ᴄʜᴀɴɴᴇʟ :</b> {0}"
 play_3 : "❍ ғᴀɪʟᴇᴅ ᴛᴏ ᴘʀᴏᴄᴇss ǫᴜᴇʀʏ."
 play_4 : "❍ <b>ᴀᴅᴍɪɴs ᴏɴʟʏ ᴘʟᴀʏ</b>\nᴏɴʟʏ ᴀᴅᴍɪɴs ᴏғ ᴛʜɪs ᴄʜᴀᴛ ᴀʀᴇ ᴀʟʟᴏᴡᴇᴅ ᴛᴏ ᴘʟᴀʏ\n\nᴄʜᴀɴɢᴇ ᴘʟᴀʏ ᴍᴏᴅᴇ ᴠɪᴀ /playmode"
@@ -173,7 +173,7 @@ queue_6 : "<b>🕚 ᴅᴜʀᴧᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴧᴛ
 queue_7 : "\n❍ ᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "<b>{0} ᴘʟᴧʏᴇʀ</b>\n\n🎄 <b>sᴛʀᴇᴧᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴧᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "<b>❖  sᴛᴧʀᴛᴇᴅ  sᴛʀᴇᴧᴍɪɴɢ |</b>\n\n<b>❍ ᴛɪᴛʟᴇ :</b> <a href={0}>{1}</a>\n<b>❍ ᴅᴜʀᴧᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs\n<b>❍ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n\n<b>❖ ᴘᴏᴡᴇʀᴇᴅ  ➥ <a href=t.me/AarumiBots>Pallavisarkaar</a></b>"
+stream_1 : "<b>❖  sᴛᴧʀᴛᴇᴅ  sᴛʀᴇᴧᴍɪɴɢ |</b>\n\n<b>❍ ᴛɪᴛʟᴇ :</b> <a href={0}>{1}</a>\n<b>❍ ᴅᴜʀᴧᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs\n<b>❍ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n\n<b>❖ ᴘᴏᴡᴇʀᴇᴅ  ➥ <a href=t.me/Rajput_0_07>꯱ׁׅ֒ᨰׁׅꫀׁׅܻꫀׁׅܻtׁׅ┣‌𝗜ꫀׁׅܻɑׁׅ֮ꭈׁׅtׁׅ🍁</a></b>"
 stream_2 : "<b>❖  sᴛᴧʀᴛᴇᴅ  sᴛʀᴇᴧᴍɪɴɢ |</b>\n\n<b>❍ sᴛʀᴇᴧᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴧᴍ [ᴜʀʟ]\n<b>❍ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {0}\n\n<b>❖ ᴘᴏᴡᴇʀᴇᴅ  ➥ <a href=t.me/Pallavisarkaar>ᴘᴧʟʟᴧᴠɪ sᴧʀᴋᴧʀ ᴍᴜsɪᴄ</a></b>"
 
 
